--- a/_pgbackup/index_1604953826.html
+++ b/_pgbackup/index_1604953826.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->         
         <!--ANGLE-->         
         <title>DR.MOHAMMED SAYAGH</title>         
         <link rel="icon" href="image/logo.png" type="image/png"> 
@@ -48,13 +47,13 @@
                                         <div class="add-mini cadreImage col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem;
 
 /* padding-bottom: 2% */
-width: 70vh;"> 
+width: 70vh; min-height: 45vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
                                                     <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 4px 12px 2px #00000032; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
                                         </div>                                         
                                         <!--text profil-->                                         
-                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 0rem 0rem; overflow-x: hidden;"> 
+                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 0rem 0rem; overflow-y: scroll; -webkit-overflow-scrolling: touch; overflow-x: hidden;"> 
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;"> 
                                             Assistant Professor at ETS (Québec University).</h3> 
                                             <h1 style="padding: 0.6% 0 0.6% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;"> 
@@ -442,14 +441,12 @@ padding: 0;">
                         </div>                         
                     </div>                     
                     <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;"> 
-                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-column justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;"> 
+                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-lg-column flex-row flex-sm-row justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;"> 
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
-                                <a href="#carousel" role="button" data-slide="prev" style="
-/* display: flex */
-/* justify-content: flex-end */" class="fleche carousel-control-prev" aria-label="prev"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
+                                <a href="#carousel" role="button" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
                             </div>                             
-                            <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
-                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: flex-end; display: flex;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
+                            <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
+                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: center; min-height: 100%; min-width: 100%; padding: ; display: flex; padding: 1.2rem; align-items: center;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
                             </div>                             
                         </div>                         
                     </div>                     
