--- a/_pgbackup/index_1604954644.html
+++ b/_pgbackup/index_1604954644.html
@@ -14,7 +14,7 @@
         <!-- Custom styles for this template -->         
         <link href="style.css" rel="stylesheet"> 
         <link href="hover-min.css" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic,300,400italic,700,700italic"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700italic,700,500italic,500,400italic,300italic,300,100italic,100"> 
@@ -129,7 +129,7 @@ min-width: 100%; overflow: hidden;">
                                             <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-stretch align-items-md-stretch align-items-sm-stretch align-items-stretch arrier-blan col-lg-9 contentBoxParagraphe contenu-md d-flex d-lg-flex d-md-flex d-sm-flex flex-lg-wrap flex-md-wrap flex-sm-wrap flex-wrap form offset-lg-0" style="grid-area: 2/1/3/2;
 
 /* overflow-y: auto */
-z-index: 9999;
+z-index: 9;
 
 /* opacity: 0.85 */
 /* min-height: 100vh */"> 
@@ -441,14 +441,12 @@ padding: 0;">
                         </div>                         
                     </div>                     
                     <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;"> 
-                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-column justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;"> 
+                        <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-lg-column flex-row flex-sm-row justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; max-height: 5rem; right: 0;"> 
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
-                                <a href="#carousel" role="button" data-slide="prev" style="
-/* display: flex */
-/* justify-content: flex-end */" class="fleche carousel-control-prev" aria-label="prev"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
+                                <a href="#carousel" role="button" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
                             </div>                             
-                            <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
-                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: flex-end; display: flex;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
+                            <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
+                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: center; min-height: 100%; min-width: 100%; padding: ; display: flex; padding: 1.2rem; align-items: center;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
                             </div>                             
                         </div>                         
                     </div>                     
