--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Custom styles for this template -->         
         <link href="style.css" rel="stylesheet"> 
         <link href="hover-min.css" rel="stylesheet"> 
-        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic,300,400italic,700,700italic"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700italic,700,500italic,500,400italic,300italic,300,100italic,100"> 
@@ -129,7 +129,7 @@ min-width: 100%; overflow: hidden;">
                                             <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-stretch align-items-md-stretch align-items-sm-stretch align-items-stretch arrier-blan col-lg-9 contentBoxParagraphe contenu-md d-flex d-lg-flex d-md-flex d-sm-flex flex-lg-wrap flex-md-wrap flex-sm-wrap flex-wrap form offset-lg-0" style="grid-area: 2/1/3/2;
 
 /* overflow-y: auto */
-z-index: 9999;
+z-index: 9;
 
 /* opacity: 0.85 */
 /* min-height: 100vh */"> 
